Functionality: Textarea changes

--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
                         <div id="error-message" for="email" class="error-message"></div>
                     </div>
                     <div id="messageElement" class="formElement messageElement">
-                        <textarea tabindex="13" id="formText" placeholder="Your message..." name="userText"
-                            required="required"></textarea>
+                        <textarea tabindex="13" id="formText" placeholder="Your message..." name="userText"></textarea>
                     </div>
 
                     <button tabindex="14" id="formSubmitButton" class="contact_form-button formElement"
